# advent_of_code_2025

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/commands/: new-day.md  part2.md
