[project]
name = "aoc_2025"
version = "2025.12"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "day_01",
    "day_02",
    "day_03",
    "day_04",
    "day_05",
    "day_06",
    "day_07",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
day_01 = { workspace = true }
day_02 = { workspace = true }
day_03 = { workspace = true }
day_04 = { workspace = true }
day_05 = { workspace = true }
day_06 = { workspace = true }
day_07 = { workspace = true }

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pyright",
]

[tool.ruff]
target-version = "py312"
 
[tool.ruff.lint]
isort.known-first-party = ["day_*"]
extend-select = [
    "I",    # https://docs.astral.sh/ruff/rules/#isort-i
    "B",    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q",    # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "PT",   # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "SIM",  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "A",    # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "EM",   # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "N",    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "UP",   # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "FAST", # https://docs.astral.sh/ruff/rules/#fastapi-fast
    "ASYNC",# https://docs.astral.sh/ruff/rules/#flake8-async-async
    "DTZ",  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "LOG",  # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "TRY",  # https://docs.astral.sh/ruff/rules/#tryceratops-try
]

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
